--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
 							</span>
 						</a>
 						<a href="index.html" class="navbar-brand logo">
-							<img src="assets/img/logo.png" class="img-fluid" alt="Logo">
+							<!--<img src="assets/img/logo.png" class="img-fluid" alt="Logo">-->
+							<h2>Doctor Khojo</h2>
 						</a>
 					</div>
 					<div class="main-menu-wrapper">
