--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
-		<title>Doccure</title>
+		<title>Doctor Khojo</title>
 		
 		<!-- Favicons -->
 		<link type="image/x-icon" href="assets/img/favicon.png" rel="icon">
@@ -43,7 +43,8 @@
 							</span>
 						</a>
 						<a href="index.html" class="navbar-brand logo">
-							<img src="assets/img/logo.png" class="img-fluid" alt="Logo">
+							<!--<img src="assets/img/logo.png" class="img-fluid" alt="Logo">-->
+							<h2>Doctor Khojo</h2>
 						</a>
 					</div>
 					<div class="main-menu-wrapper">
