--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 							</a>
 						</div>
 						<ul class="main-nav">
-							<li class="active">
+							<li class="active ml-3">
 								<a href="index.html">Home</a>
 							</li>
 
