--- a/doctors.html
+++ b/doctors.html
@@ -66,7 +66,7 @@
 							</a>
 						</div>
 						<ul class="main-nav">
-							<li class="khojo">
+							<li class="ml-3">
 								<a href="index.html">Home</a>
 							</li>
 							<li class="has-submenu">
