--- a/appointments.html
+++ b/appointments.html
@@ -703,11 +703,12 @@
 							
 								<!-- Footer Widget -->
 								<div class="footer-widget footer-about">
-									<div class="footer-logo">
-										<img src="assets/img/footer-logo.png" alt="logo">
+									<div class="footer-logo khojo">
+										<!--<img src="assets/img/footer-logo.png" alt="logo">-->
+										<h2>Doctor Khojo</h2>
 									</div>
 									<div class="footer-about-content">
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+										<!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>-->appoi
 										<div class="social-icon">
 											<ul>
 												<li>
@@ -871,7 +872,7 @@
 							</li>
 							<li>
 								<span class="title">Paid Amount</span>
-								<span class="text">$450</span>
+								<span class="text">₹ 450</span>
 							</li>
 						</ul>
 					</div>
