--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
 					<div class="main-menu-wrapper">
 						<div class="menu-header">
 							<a href="index.html" class="menu-logo">
-								<img src="assets/img/logo.png" class="img-fluid" alt="Logo">
+								<!--<img src="assets/img/logo.png" class="img-fluid" alt="Logo">-->
+								<h2>Doctor Khojo</h2>
 							</a>
 							<a id="menu_close" class="menu-close" href="javascript:void(0);">
 								<i class="fas fa-times"></i>
@@ -168,7 +169,7 @@
 							</div>
 							<div class="header-contact-detail">
 								<p class="contact-header">Contact</p>
-								<p class="contact-info-header"> +1 315 369 5943</p>
+								<p class="contact-info-header"> +91 9955871746</p>
 							</div>
 						</li>
 						<li class="nav-item">
