--- a/doctors.html
+++ b/doctors.html
@@ -612,7 +612,7 @@
 													<span class="d-inline-block average-rating">(52)</span>
 												</div>
 												<div class="clinic-details">
-													<p class="doc-location"><i class="fas fa-map-marker-alt"></i> Texas, USA</p>
+													<p class="doc-location"><i class="fas fa-map-marker-alt"></i> Hajipur, INDIA</p>
 													<ul class="clinic-gallery">
 														<li>
 															<a href="assets/img/features/feature-01.jpg" data-fancybox="gallery">
