--- a/appointments.html
+++ b/appointments.html
@@ -328,12 +328,12 @@
 											<img src="assets/img/patients/patient.jpg" alt="User Image">
 										</a>
 										<div class="profile-det-info">
-											<h3><a href="patient-profile.html">Richard Wilson</a></h3>
+											<h3><a href="patient-profile.html">Prince Chauhan</a></h3>
 											<div class="patient-details">
 												<h5><i class="far fa-clock"></i> 14 Nov 2019, 10.00 AM</h5>
-												<h5><i class="fas fa-map-marker-alt"></i> Newyork, United States</h5>
-												<h5><i class="fas fa-envelope"></i> richard@example.com</h5>
-												<h5 class="mb-0"><i class="fas fa-phone"></i> +1 923 782 4575</h5>
+												<h5><i class="fas fa-map-marker-alt"></i> Hajipu, Bihar</h5>
+												<h5><i class="fas fa-envelope"></i> learn@khabaitech.com</h5>
+												<h5 class="mb-0"><i class="fas fa-phone"></i> +91 9955871746</h5>
 											</div>
 										</div>
 									</div>
@@ -358,12 +358,12 @@
 											<img src="assets/img/patients/patient1.jpg" alt="User Image">
 										</a>
 										<div class="profile-det-info">
-											<h3><a href="patient-profile.html">Charlene Reed </a></h3>
+											<h3><a href="patient-profile.html">Vishwak Kumar </a></h3>
 											<div class="patient-details">
 												<h5><i class="far fa-clock"></i> 12 Nov 2019, 5.00 PM</h5>
-												<h5><i class="fas fa-map-marker-alt"></i> North Carolina, United States</h5>
-												<h5><i class="fas fa-envelope"></i> charlenereed@example.com</h5>
-												<h5 class="mb-0"><i class="fas fa-phone"></i> +1 828 632 9170</h5>
+												<h5><i class="fas fa-map-marker-alt"></i>Hajipu, Bihar</h5>
+												<h5><i class="fas fa-envelope"></i> learn@khabaitech.com</h5>
+												<h5 class="mb-0"><i class="fas fa-phone"></i> +91 9955871746</h5>
 											</div>
 										</div>
 									</div>
@@ -388,13 +388,13 @@
 											<img src="assets/img/patients/patient2.jpg" alt="User Image">
 										</a>
 										<div class="profile-det-info">
-											<h3><a href="patient-profile.html">Travis Trimble</a></h3>
+											<h3><a href="patient-profile.html">Neha Singh</a></h3>
 											
 											<div class="patient-details">
 												<h5><i class="far fa-clock"></i> 11 Nov 2019, 8.00 PM</h5>
-												<h5><i class="fas fa-map-marker-alt"></i> Maine, United States</h5>
-												<h5><i class="fas fa-envelope"></i> travistrimble@example.com</h5>
-												<h5 class="mb-0"><i class="fas fa-phone"></i> +1 207 729 9974</h5>
+												<h5><i class="fas fa-map-marker-alt"></i> Hajipu, Bihar</h5>
+												<h5><i class="fas fa-envelope"></i> learn@khabaittech.com</h5>
+												<h5 class="mb-0"><i class="fas fa-phone"></i> +91 9955871746</h5>
 											</div>
 										</div>
 									</div>
@@ -420,12 +420,12 @@
 											<img src="assets/img/patients/patient3.jpg" alt="User Image">
 										</a>
 										<div class="profile-det-info">
-											<h3><a href="patient-profile.html">Carl Kelly</a></h3>
+											<h3><a href="patient-profile.html">Shandhya Kumari</a></h3>
 											<div class="patient-details">
 												<h5><i class="far fa-clock"></i> 9 Nov 2019, 9.00 AM</h5>
-												<h5><i class="fas fa-map-marker-alt"></i> Newyork, United States</h5>
-												<h5><i class="fas fa-envelope"></i> carlkelly@example.com</h5>
-												<h5 class="mb-0"><i class="fas fa-phone"></i> +1 260 724 7769</h5>
+												<h5><i class="fas fa-map-marker-alt"></i>Hajipu, Bihar</h5>
+												<h5><i class="fas fa-envelope"></i> learn@khabaitech.com</h5>
+												<h5 class="mb-0"><i class="fas fa-phone"></i> +91 9955871746</h5>
 											</div>
 										</div>
 									</div>
@@ -450,12 +450,12 @@
 											<img src="assets/img/patients/patient4.jpg" alt="User Image">
 										</a>
 										<div class="profile-det-info">
-											<h3><a href="patient-profile.html">Michelle Fairfax</a></h3>
+											<h3><a href="patient-profile.html">Suman Rani</a></h3>
 											<div class="patient-details">
 												<h5><i class="far fa-clock"></i> 9 Nov 2019, 1.00 PM</h5>
-												<h5><i class="fas fa-map-marker-alt"></i> Indiana, United States</h5>
-												<h5><i class="fas fa-envelope"></i> michellefairfax@example.com</h5>
-												<h5 class="mb-0"><i class="fas fa-phone"></i> +1 504 368 6874</h5>
+												<h5><i class="fas fa-map-marker-alt"></i> Hajipu, Bihar</h5>
+												<h5><i class="fas fa-envelope"></i> learn@khabaittech.com</h5>
+												<h5 class="mb-0"><i class="fas fa-phone"></i> +91 9955871746</h5>
 											</div>
 										</div>
 									</div>
@@ -480,12 +480,12 @@
 											<img src="assets/img/patients/patient5.jpg" alt="User Image">
 										</a>
 										<div class="profile-det-info">
-											<h3><a href="patient-profile.html">Gina Moore</a></h3>
+											<h3><a href="patient-profile.html">Amisha Kumari</a></h3>
 											<div class="patient-details">
 												<h5><i class="far fa-clock"></i> 8 Nov 2019, 3.00 PM</h5>
-												<h5><i class="fas fa-map-marker-alt"></i> Florida, United States</h5>
-												<h5><i class="fas fa-envelope"></i> ginamoore@example.com</h5>
-												<h5 class="mb-0"><i class="fas fa-phone"></i> +1 954 820 7887</h5>
+												<h5><i class="fas fa-map-marker-alt"></i> Hajipu, Bihar</h5>
+												<h5><i class="fas fa-envelope"></i> learn@khabaitech.com</h5>
+												<h5 class="mb-0"><i class="fas fa-phone"></i> +91 9955871746</h5>
 											</div>
 										</div>
 									</div>
@@ -510,12 +510,12 @@
 											<img src="assets/img/patients/patient6.jpg" alt="User Image">
 										</a>
 										<div class="profile-det-info">
-											<h3><a href="patient-profile.html">Elsie Gilley</a></h3>
+											<h3><a href="patient-profile.html">Chhotu Kumar</a></h3>
 											<div class="patient-details">
 												<h5><i class="far fa-clock"></i> 6 Nov 2019, 9.00 AM</h5>
-												<h5><i class="fas fa-map-marker-alt"></i> Kentucky, United States</h5>
-												<h5><i class="fas fa-envelope"></i> elsiegilley@example.com</h5>
-												<h5 class="mb-0"><i class="fas fa-phone"></i> +1 315 384 4562</h5>
+												<h5><i class="fas fa-map-marker-alt"></i>Daudnagar Chakgadho</h5>
+												<h5><i class="fas fa-envelope"></i> learn@khabaitech.com</h5>
+												<h5 class="mb-0"><i class="fas fa-phone"></i> +91 9955871746</h5>
 											</div>
 										</div>
 									</div>
@@ -540,12 +540,12 @@
 											<img src="assets/img/patients/patient7.jpg" alt="User Image">
 										</a>
 										<div class="profile-det-info">
-											<h3><a href="patient-profile.html">Joan Gardner</a></h3>
+											<h3><a href="patient-profile.html">Nitesh Singh</a></h3>
 											<div class="patient-details">
 												<h5><i class="far fa-clock"></i> 5 Nov 2019, 12.00 PM</h5>
-												<h5><i class="fas fa-map-marker-alt"></i> California, United States</h5>
-												<h5><i class="fas fa-envelope"></i> joangardner@example.com</h5>
-												<h5 class="mb-0"><i class="fas fa-phone"></i> +1 707 2202 603</h5>
+												<h5><i class="fas fa-map-marker-alt"></i> Hajipu, Bihar</h5>
+												<h5><i class="fas fa-envelope"></i> learn@khabaitech.com</h5>
+												<h5 class="mb-0"><i class="fas fa-phone"></i> +91 9955871746</h5>
 											</div>
 										</div>
 									</div>
@@ -570,12 +570,12 @@
 											<img src="assets/img/patients/patient8.jpg" alt="User Image">
 										</a>
 										<div class="profile-det-info">
-											<h3><a href="patient-profile.html">Daniel Griffing</a></h3>
+											<h3><a href="patient-profile.html">Seneha Kumari</a></h3>
 											<div class="patient-details">
 												<h5><i class="far fa-clock"></i> 5 Nov 2019, 7.00 PM</h5>
-												<h5><i class="fas fa-map-marker-alt"></i> New Jersey, United States</h5>
-												<h5><i class="fas fa-envelope"></i> danielgriffing@example.com</h5>
-												<h5 class="mb-0"><i class="fas fa-phone"></i> +1 973 773 9497</h5>
+												<h5><i class="fas fa-map-marker-alt"></i> Hajipu, Bihar</h5>
+												<h5><i class="fas fa-envelope"></i> Learn@khabaitech.com</h5>
+												<h5 class="mb-0"><i class="fas fa-phone"></i> +91 99558717467</h5>
 											</div>
 										</div>
 									</div>
@@ -600,12 +600,12 @@
 											<img src="assets/img/patients/patient9.jpg" alt="User Image">
 										</a>
 										<div class="profile-det-info">
-											<h3><a href="patient-profile.html">Walter Roberson</a></h3>
+											<h3><a href="patient-profile.html">Bikky Singh</a></h3>
 											<div class="patient-details">
 												<h5><i class="far fa-clock"></i> 4 Nov 2019, 10.00 AM</h5>
-												<h5><i class="fas fa-map-marker-alt"></i> Florida, United States</h5>
-												<h5><i class="fas fa-envelope"></i> walterroberson@example.com</h5>
-												<h5 class="mb-0"><i class="fas fa-phone"></i> +1 850 358 4445</h5>
+												<h5><i class="fas fa-map-marker-alt"></i> Hajipu, Bihars</h5>
+												<h5><i class="fas fa-envelope"></i> learn@khabaitech.com</h5>
+												<h5 class="mb-0"><i class="fas fa-phone"></i> +91 9955871746</h5>
 											</div>
 										</div>
 									</div>
@@ -630,12 +630,12 @@
 											<img src="assets/img/patients/patient10.jpg" alt="User Image">
 										</a>
 										<div class="profile-det-info">
-											<h3><a href="patient-profile.html">Robert Rhodes</a></h3>
+											<h3><a href="patient-profile.html">payal Singh</a></h3>
 											<div class="patient-details">
 												<h5><i class="far fa-clock"></i> 4 Nov 2019, 11.00 AM</h5>
-												<h5><i class="fas fa-map-marker-alt"></i> California, United States</h5>
-												<h5><i class="fas fa-envelope"></i> robertrhodes@example.com</h5>
-												<h5 class="mb-0"><i class="fas fa-phone"></i> +1 858 259 5285</h5>
+												<h5><i class="fas fa-map-marker-alt"></i> Hajipu, Bihar</h5>
+												<h5><i class="fas fa-envelope"></i> learn@khabaitech.com</h5>
+												<h5 class="mb-0"><i class="fas fa-phone"></i> +91 9955871746</h5>
 											</div>
 										</div>
 									</div>
@@ -660,12 +660,12 @@
 											<img src="assets/img/patients/patient11.jpg" alt="User Image">
 										</a>
 										<div class="profile-det-info">
-											<h3><a href="patient-profile.html">Harry Williams</a></h3>
+											<h3><a href="patient-profile.html">Deepu</a></h3>
 											<div class="patient-details">
 												<h5><i class="far fa-clock"></i> 3 Nov 2019, 6.00 PM</h5>
-												<h5><i class="fas fa-map-marker-alt"></i> Colorado, United States</h5>
-												<h5><i class="fas fa-envelope"></i> harrywilliams@example.com</h5>
-												<h5 class="mb-0"><i class="fas fa-phone"></i> +1 303 607 7075</h5>
+												<h5><i class="fas fa-map-marker-alt"></i> Hajipu, Bihar</h5>
+												<h5><i class="fas fa-envelope"></i> learn@khabaitech.com</h5>
+												<h5 class="mb-0"><i class="fas fa-phone"></i> +91 9955871746</h5>
 											</div>
 										</div>
 									</div>
