doctor-profile.html

--- a/doctor-profile.html
+++ b/doctor-profile.html
@@ -223,7 +223,7 @@
 											<span class="d-inline-block average-rating">(35)</span>
 										</div>
 										<div class="clinic-details">
-											<p class="doc-location"><i class="fas fa-map-marker-alt"></i> Newyork, USA - <a href="javascript:void(0);">Get Directions</a></p>
+											<p class="doc-location"><i class="fas fa-map-marker-alt"></i> Hajipur, INDAI - <a href="javascript:void(0);">Get Directions</a></p>
 											<ul class="clinic-gallery">
 												<li>
 													<a href="assets/img/features/feature-01.jpg" data-fancybox="gallery">
@@ -258,7 +258,7 @@
 										<ul>
 											<li><i class="far fa-thumbs-up"></i> 99%</li>
 											<li><i class="far fa-comment"></i> 35 Feedback</li>
-											<li><i class="fas fa-map-marker-alt"></i> Hajipur, INDIA/li>
+											<li><i class="fas fa-map-marker-alt"></i> Hajipur, INDIA</li>
 											<li><i class="far fa-money-bill-alt"></i> ₹100 per hour </li>
 										</ul>
 									</div>
