--- a/doctor-profile.html
+++ b/doctor-profile.html
@@ -211,8 +211,8 @@
 										<img src="assets/img/doctors/doctor-thumb-02.jpg" class="img-fluid" alt="User Image">
 									</div>
 									<div class="doc-info-cont">
-										<h4 class="doc-name">Dr. Darren Elder</h4>
-										<p class="doc-speciality">BDS, MDS - Oral & Maxillofacial Surgery</p>
+										<h4 class="doc-name">Dr. Ravi Prakash</h4>
+										<p class="doc-speciality">Anaesthetic</p>
 										<p class="doc-department"><img src="assets/img/specialities/specialities-05.png" class="img-fluid" alt="Speciality">Dentist</p>
 										<div class="rating">
 											<i class="fas fa-star filled"></i>
