--- a/doctors.html
+++ b/doctors.html
@@ -312,8 +312,8 @@
 												</a>
 											</div>
 											<div class="doc-info-cont">
-												<h4 class="doc-name"><a href="doctor-profile.html">Dr. Ruby Perrin</a></h4>
-												<p class="doc-speciality">MDS - Periodontology and Oral Implantology, BDS</p>
+												<h4 class="doc-name"><a href="doctor-profile.html">Dr. Ravi Prakash</a></h4>
+												<p class="doc-speciality">Anaesthetic</p>
 												<h5 class="doc-department"><img src="assets/img/specialities/specialities-05.png" class="img-fluid" alt="Speciality">Dentist</h5>
 												<div class="rating">
 													<i class="fas fa-star filled"></i>
@@ -384,8 +384,8 @@
 												</a>
 											</div>
 											<div class="doc-info-cont">
-												<h4 class="doc-name"><a href="doctor-profile.html">Dr. Darren Elder</a></h4>
-												<p class="doc-speciality">BDS, MDS - Oral & Maxillofacial Surgery</p>
+												<h4 class="doc-name"><a href="doctor-profile.html">Dr.Dya Shankar</a></h4>
+												<p class="doc-speciality">Dentist</p>
 												<h5 class="doc-department"><img src="assets/img/specialities/specialities-05.png" class="img-fluid" alt="Speciality">Dentist</h5>
 												<div class="rating">
 													<i class="fas fa-star filled"></i>
@@ -456,8 +456,8 @@
 												</a>
 											</div>
 											<div class="doc-info-cont">
-												<h4 class="doc-name"><a href="doctor-profile.html">Dr. Deborah Angel</a></h4>
-												<p class="doc-speciality">MBBS, MD - General Medicine, DNB - Cardiology</p>
+												<h4 class="doc-name"><a href="doctor-profile.html">Dr. O.P Chauhan</a></h4>
+												<p class="doc-speciality">Skin</p>
 												<p class="doc-department"><img src="assets/img/specialities/specialities-04.png" class="img-fluid" alt="Speciality">Cardiology</p>
 												<div class="rating">
 													<i class="fas fa-star filled"></i>
@@ -528,8 +528,8 @@
 												</a>
 											</div>
 											<div class="doc-info-cont">
-												<h4 class="doc-name"><a href="doctor-profile.html">Dr. Sofia Brient</a></h4>
-												<p class="doc-speciality">MBBS, MS - General Surgery, MCh - Urology</p>
+												<h4 class="doc-name"><a href="doctor-profile.html">Dr. G.M Sinha</a></h4>
+												<p class="doc-speciality">Eye</p>
 												<p class="doc-department"><img src="assets/img/specialities/specialities-01.png" class="img-fluid" alt="Speciality">Urology</p>
 												<div class="rating">
 													<i class="fas fa-star filled"></i>
@@ -600,8 +600,8 @@
 												</a>
 											</div>
 											<div class="doc-info-cont">
-												<h4 class="doc-name"><a href="doctor-profile.html">Dr. Katharine Berthold</a></h4>
-												<p class="doc-speciality">MS - Orthopaedics, MBBS, M.Ch - Orthopaedics</p>
+												<h4 class="doc-name"><a href="doctor-profile.html">Dr. Ashma Parvin</a></h4>
+												<p class="doc-speciality">Gayeni</p>
 												<p class="doc-department"><img src="assets/img/specialities/specialities-03.png" class="img-fluid" alt="Speciality">Orthopaedics</p>
 												<div class="rating">
 													<i class="fas fa-star filled"></i>
