--- a/pharmacy-details.html
+++ b/pharmacy-details.html
@@ -45,7 +45,8 @@
 							</span>
 						</a>
 						<a href="index.html" class="navbar-brand logo">
-							<img src="assets/img/logo.png" class="img-fluid" alt="Logo">
+							<!--<img src="assets/img/logo.png" class="img-fluid" alt="Logo">-->
+							<h1>Doctor Khojo</h1>
 						</a>
 					</div>
 					<div class="main-menu-wrapper">
