--- a/pharmacy-details.html
+++ b/pharmacy-details.html
@@ -45,15 +45,15 @@
 							</span>
 						</a>
 						<a href="index.html" class="navbar-brand logo">
-							<!--<img src="assets/img/logo.png" class="img-fluid" alt="Logo">-->
-							<h1>Doctor Khojo</h1>
+							<img src="assets/img/logo.png" class="img-fluid" alt="Logo">
+							
 						</a>
 					</div>
 					<div class="main-menu-wrapper">
 						<div class="menu-header">
 							<a href="index.html" class="menu-logo">
-								<!--<img src="assets/img/logo.png" class="img-fluid" alt="Logo">-->
-								<h1>Doctor Khojo</h1>
+								<img src="assets/img/logo.png" class="img-fluid" alt="Logo">
+								
 							</a>
 							<a id="menu_close" class="menu-close" href="javascript:void(0);">
 								<i class="fas fa-times"></i>
