--- a/index.html
+++ b/index.html
@@ -646,7 +646,7 @@
 									</div>
 									<div class="pro-content">
 										<h3 class="title">
-											<a href="doctor-profile.html">Linda Tobin</a> 
+											<a href="doctor-profile.html">Dr.Ashma Pravin</a> 
 											<i class="fas fa-check-circle verified"></i>
 										</h3>
 										<p class="speciality">MBBS, MD - General Medicine, DM - Neurology</p>
