--- a/doctors.html
+++ b/doctors.html
@@ -109,9 +109,9 @@
 									<li><a href="booking-success.html">Booking Success</a></li>
 									<li><a href="patient-dashboard.html">Patient Dashboard</a></li>
 									<li><a href="favourites.html">Favourites</a></li>
-									<li><a href="chat.html">Chat</a></li>
+									<!--<li><a href="chat.html">Chat</a></li>
 									<li><a href="profile-settings.html">Profile Settings</a></li>
-									<li><a href="change-password.html">Change Password</a></li>
+									<li><a href="change-password.html">Change Password</a></li>-->
 								</ul>
 							</li>	
 							<li class="has-submenu">
@@ -124,17 +124,18 @@
 									<li><a href="product-description.html">Product Description</a></li>
 									<li><a href="cart.html">Cart</a></li>
 									<li><a href="product-checkout.html">Product Checkout</a></li>
-									<li><a href="payment-success.html">Payment Success</a></li>
+									<!--<li><a href="payment-success.html">Payment Success</a></li>-->
 								</ul>
 							</li>
 							<li class="has-submenu">
-								<a href="">Pages <i class="fas fa-chevron-down"></i></a>
+								<a href="">Diagnostics <i class="fas fa-chevron-down"></i></a>
 								<ul class="submenu">
-									<li><a href="voice-call.html">Voice Call</a></li>
-									<li><a href="video-call.html">Video Call</a></li>
-									<li><a href="search.html">Search Doctors</a></li>
-									<li><a href="calendar.html">Calendar</a></li>
-									<li><a href="components.html">Components</a></li>
+									<li><a href="dignostics-index.html">Diagnostics</a></li>
+									<li><a href="lab-search.html">Lab Search</a></li>
+									<li><a href="lab-details.html">Lab Details</a></li>
+									<li><a href="diagnostics-all.html">Diagnostics List</a></li>
+									<!--<li><a href="calendar.html">Calendar</a></li>
+									<li><a href="components.html">Components</a></li>-->
 									<li class="has-submenu">
 										<a href="invoices.html">Invoices</a>
 										<ul class="submenu">
@@ -142,10 +143,9 @@
 											<li><a href="invoice-view.html">Invoice View</a></li>
 										</ul>
 									</li>
-									<li><a href="blank-page.html">Starter Page</a></li>
+									<!--<li><a href="blank-page.html">Starter Page</a></li>-->
 									<li><a href="login.html">Login</a></li>
 									<li><a href="register.html">Register</a></li>
-									<li><a href="forgot-password.html">Forgot Password</a></li>
 								</ul>
 							</li>
 							<li class="has-submenu">
