--- a/doctor-profile.html
+++ b/doctor-profile.html
@@ -794,7 +794,7 @@
 								
 									<!-- Write Review -->
 									<div class="write-review">
-										<h4>Write a review for <strong>Dr. Darren Elder</strong></h4>
+										<h4>Write a review for <strong>Dr.Ravi Prakash</strong></h4>
 										
 										<!-- Write Review Form -->
 										<form>
