--- a/index.html
+++ b/index.html
@@ -358,10 +358,10 @@
 									</div>
 									<div class="pro-content">
 										<h3 class="title">
-											<a href="doctor-profile.html">Ruby Perrin</a> 
+											<a href="doctor-profile.html">Dr.Archana Ojha</a> 
 											<i class="fas fa-check-circle verified"></i>
 										</h3>
-										<p class="speciality">MDS - Periodontology and Oral Implantology, BDS</p>
+										<p class="speciality">Gayeni</p>
 										<div class="rating">
 											<i class="fas fa-star filled"></i>
 											<i class="fas fa-star filled"></i>
@@ -406,10 +406,10 @@
 									</div>
 									<div class="pro-content">
 										<h3 class="title">
-											<a href="doctor-profile.html">Darren Elder</a> 
+											<a href="doctor-profile.html">Dr.Ravi Prakash</a> 
 											<i class="fas fa-check-circle verified"></i>
 										</h3>
-										<p class="speciality">BDS, MDS - Oral & Maxillofacial Surgery</p>
+										<p class="speciality">Anaesthetic</p>
 										<div class="rating">
 											<i class="fas fa-star filled"></i>
 											<i class="fas fa-star filled"></i>
@@ -454,10 +454,10 @@
 									</div>
 									<div class="pro-content">
 										<h3 class="title">
-											<a href="doctor-profile.html">Deborah Angel</a> 
+											<a href="doctor-profile.html">Dr.Daya Shankar</a> 
 											<i class="fas fa-check-circle verified"></i>
 										</h3>
-										<p class="speciality">MBBS, MD - General Medicine, DNB - Cardiology</p>
+										<p class="speciality">Dentist</p>
 										<div class="rating">
 											<i class="fas fa-star filled"></i>
 											<i class="fas fa-star filled"></i>
@@ -502,10 +502,10 @@
 									</div>
 									<div class="pro-content">
 										<h3 class="title">
-											<a href="doctor-profile.html">Sofia Brient</a> 
+											<a href="doctor-profile.html">Dr.Ashma Pravin</a> 
 											<i class="fas fa-check-circle verified"></i>
 										</h3>
-										<p class="speciality">MBBS, MS - General Surgery, MCh - Urology</p>
+										<p class="speciality">Gayeni</p>
 										<div class="rating">
 											<i class="fas fa-star filled"></i>
 											<i class="fas fa-star filled"></i>
@@ -550,10 +550,10 @@
 									</div>
 									<div class="pro-content">
 										<h3 class="title">
-											<a href="doctor-profile.html">Marvin Campbell</a> 
+											<a href="doctor-profile.html">Dr.O.P Chauhan</a> 
 											<i class="fas fa-check-circle verified"></i>
 										</h3>
-										<p class="speciality">MBBS, MD - Ophthalmology, DNB - Ophthalmology</p>
+										<p class="speciality">Skin</p>
 										<div class="rating">
 											<i class="fas fa-star filled"></i>
 											<i class="fas fa-star filled"></i>
@@ -598,10 +598,10 @@
 									</div>
 									<div class="pro-content">
 										<h3 class="title">
-											<a href="doctor-profile.html">Katharine Berthold</a> 
+											<a href="doctor-profile.html">Dr.Ashok Kumar</a> 
 											<i class="fas fa-check-circle verified"></i>
 										</h3>
-										<p class="speciality">MS - Orthopaedics, MBBS, M.Ch - Orthopaedics</p>
+										<p class="speciality">Child</p>
 										<div class="rating">
 											<i class="fas fa-star filled"></i>
 											<i class="fas fa-star filled"></i>
@@ -646,10 +646,10 @@
 									</div>
 									<div class="pro-content">
 										<h3 class="title">
-											<a href="doctor-profile.html">Dr.Ashma Pravin</a> 
+											<a href="doctor-profile.html">Dr.Suman Singh</a> 
 											<i class="fas fa-check-circle verified"></i>
 										</h3>
-										<p class="speciality">MBBS, MD - General Medicine, DM - Neurology</p>
+										<p class="speciality">Gayeni</p>
 										<div class="rating">
 											<i class="fas fa-star filled"></i>
 											<i class="fas fa-star filled"></i>
@@ -694,10 +694,10 @@
 									</div>
 									<div class="pro-content">
 										<h3 class="title">
-											<a href="doctor-profile.html">Paul Richard</a> 
+											<a href="doctor-profile.html">Dr.N.K.Singh</a> 
 											<i class="fas fa-check-circle verified"></i>
 										</h3>
-										<p class="speciality">MBBS, MD - Dermatology , Venereology & Lepros</p>
+										<p class="speciality">Ortho</p>
 										<div class="rating">
 											<i class="fas fa-star filled"></i>
 											<i class="fas fa-star filled"></i>
