--- a/patient-dashboard.html
+++ b/patient-dashboard.html
@@ -338,7 +338,7 @@
 																			<a href="doctor-profile.html" class="avatar avatar-sm mr-2">
 																				<img class="avatar-img rounded-circle" src="assets/img/doctors/doctor-thumb-01.jpg" alt="User Image">
 																			</a>
-																			<a href="doctor-profile.html">Dr. Ruby Perrin <span>Dental</span></a>
+																			<a href="doctor-profile.html">Dr. Ashma Parvin <span>Gayeni</span></a>
 																		</h2>
 																	</td>
 																	<td>14 Nov 2019 <span class="d-block text-info">10.00 AM</span></td>
@@ -363,7 +363,7 @@
 																			<a href="doctor-profile.html" class="avatar avatar-sm mr-2">
 																				<img class="avatar-img rounded-circle" src="assets/img/doctors/doctor-thumb-02.jpg" alt="User Image">
 																			</a>
-																			<a href="doctor-profile.html">Dr. Darren Elder <span>Dental</span></a>
+																			<a href="doctor-profile.html">Dr. Dya Shankar <span>Dentist</span></a>
 																		</h2>
 																	</td>
 																	<td>12 Nov 2019 <span class="d-block text-info">8.00 PM</span></td>
@@ -388,7 +388,7 @@
 																			<a href="doctor-profile.html" class="avatar avatar-sm mr-2">
 																				<img class="avatar-img rounded-circle" src="assets/img/doctors/doctor-thumb-03.jpg" alt="User Image">
 																			</a>
-																			<a href="doctor-profile.html">Dr. Deborah Angel <span>Cardiology</span></a>
+																			<a href="doctor-profile.html">Dr. Ravi Prakash <span>Anaesthetic</span></a>
 																		</h2>
 																	</td>
 																	<td>11 Nov 2019 <span class="d-block text-info">11.00 AM</span></td>
@@ -413,7 +413,7 @@
 																			<a href="doctor-profile.html" class="avatar avatar-sm mr-2">
 																				<img class="avatar-img rounded-circle" src="assets/img/doctors/doctor-thumb-04.jpg" alt="User Image">
 																			</a>
-																			<a href="doctor-profile.html">Dr. Sofia Brient <span>Urology</span></a>
+																			<a href="doctor-profile.html">Dr. Archana Ojha <span>Gayeni</span></a>
 																		</h2>
 																	</td>
 																	<td>10 Nov 2019 <span class="d-block text-info">3.00 PM</span></td>
@@ -438,7 +438,7 @@
 																			<a href="doctor-profile.html" class="avatar avatar-sm mr-2">
 																				<img class="avatar-img rounded-circle" src="assets/img/doctors/doctor-thumb-05.jpg" alt="User Image">
 																			</a>
-																			<a href="doctor-profile.html">Dr. Marvin Campbell <span>Ophthalmology</span></a>
+																			<a href="doctor-profile.html">Dr. O.P Chauhan <span>Skin</span></a>
 																		</h2>
 																	</td>
 																	<td>9 Nov 2019 <span class="d-block text-info">7.00 PM</span></td>
@@ -463,7 +463,7 @@
 																			<a href="doctor-profile.html" class="avatar avatar-sm mr-2">
 																				<img class="avatar-img rounded-circle" src="assets/img/doctors/doctor-thumb-06.jpg" alt="User Image">
 																			</a>
-																			<a href="doctor-profile.html">Dr. Katharine Berthold <span>Orthopaedics</span></a>
+																			<a href="doctor-profile.html">Dr. Ashok Kumar <span>Child</span></a>
 																		</h2>
 																	</td>
 																	<td>8 Nov 2019 <span class="d-block text-info">9.00 AM</span></td>
@@ -488,7 +488,7 @@
 																			<a href="doctor-profile.html" class="avatar avatar-sm mr-2">
 																				<img class="avatar-img rounded-circle" src="assets/img/doctors/doctor-thumb-07.jpg" alt="User Image">
 																			</a>
-																			<a href="doctor-profile.html">Dr. Linda Tobin <span>Neurology</span></a>
+																			<a href="doctor-profile.html">Dr. Suman Singh <span>Gayeni</span></a>
 																		</h2>
 																	</td>
 																	<td>8 Nov 2019 <span class="d-block text-info">6.00 PM</span></td>
@@ -513,7 +513,7 @@
 																			<a href="doctor-profile.html" class="avatar avatar-sm mr-2">
 																				<img class="avatar-img rounded-circle" src="assets/img/doctors/doctor-thumb-08.jpg" alt="User Image">
 																			</a>
-																			<a href="doctor-profile.html">Dr. Paul Richard <span>Dermatology</span></a>
+																			<a href="doctor-profile.html">Dr. N.K Singh<span>Ortho</span></a>
 																		</h2>
 																	</td>
 																	<td>7 Nov 2019 <span class="d-block text-info">9.00 PM</span></td>
@@ -538,7 +538,7 @@
 																			<a href="doctor-profile.html" class="avatar avatar-sm mr-2">
 																				<img class="avatar-img rounded-circle" src="assets/img/doctors/doctor-thumb-09.jpg" alt="User Image">
 																			</a>
-																			<a href="doctor-profile.html">Dr. John Gibbs <span>Dental</span></a>
+																			<a href="doctor-profile.html">Dr.Sanjiv Kumar <span>Child</span></a>
 																		</h2>
 																	</td>
 																	<td>6 Nov 2019 <span class="d-block text-info">8.00 PM</span></td>
@@ -563,7 +563,7 @@
 																			<a href="doctor-profile.html" class="avatar avatar-sm mr-2">
 																				<img class="avatar-img rounded-circle" src="assets/img/doctors/doctor-thumb-10.jpg" alt="User Image">
 																			</a>
-																			<a href="doctor-profile.html">Dr. Olga Barlow  <span>Dental</span></a>
+																			<a href="doctor-profile.html">Dr. Madan Ray  <span>Child</span></a>
 																		</h2>
 																	</td>
 																	<td>5 Nov 2019 <span class="d-block text-info">5.00 PM</span></td>
@@ -613,7 +613,7 @@
 																			<a href="doctor-profile.html" class="avatar avatar-sm mr-2">
 																				<img class="avatar-img rounded-circle" src="assets/img/doctors/doctor-thumb-01.jpg" alt="User Image">
 																			</a>
-																			<a href="doctor-profile.html">Dr. Ruby Perrin <span>Dental</span></a>
+																			<a href="doctor-profile.html">Dr.Anant Kashyap <span>Ortho</span></a>
 																		</h2>
 																	</td>
 																	<td class="text-right">
@@ -635,7 +635,7 @@
 																			<a href="doctor-profile.html" class="avatar avatar-sm mr-2">
 																				<img class="avatar-img rounded-circle" src="assets/img/doctors/doctor-thumb-02.jpg" alt="User Image">
 																			</a>
-																			<a href="doctor-profile.html">Dr. Darren Elder <span>Dental</span></a>
+																			<a href="doctor-profile.html">Dr. Ajit Prakash <span>Child</span></a>
 																		</h2>
 																	</td>
 																	<td class="text-right">
