--- a/booking.html
+++ b/booking.html
@@ -68,7 +68,7 @@
 								<ul class="submenu">
 									<li><a href="doctor-dashboard.html">Doctor Dashboard</a></li>
 									<li><a href="appointments.html">Appointments</a></li>
-									<li><a href="schedule-timings.html">Schedule Timing</a></li>
+									<!--<li><a href="schedule-timings.html">Schedule Timing</a></li>
 									<li><a href="my-patients.html">Patients List</a></li>
 									<li><a href="patient-profile.html">Patients Profile</a></li>
 									<li><a href="chat-doctor.html">Chat</a></li>
@@ -83,29 +83,29 @@
 											<li><a href="blog-details.html">Blog view</a></li>
 											<li><a href="doctor-add-blog.html">Add Blog</a></li>
 										</ul>
-									</li>
+									</li>-->
 								</ul>
 							</li>	
 							<li class="has-submenu active">
 								<a href="">Patients <i class="fas fa-chevron-down"></i></a>
 								<ul class="submenu">
 									<li class="has-submenu">
-										<a href="#">Doctors</a>
-										<ul class="submenu">
+										<!--<a href="#">Doctors</a>
+										 <ul class="submenu">
 											<li><a href="map-grid.html">Map Grid</a></li>
 											<li><a href="map-list.html">Map List</a></li>
-										</ul>
+										</ul>-->
 									</li>
 									<li><a href="search.html">Search Doctor</a></li>
 									<li><a href="doctor-profile.html">Doctor Profile</a></li>
-									<li class="active"><a href="booking.html">Booking</a></li>
+									<li><a href="booking.html">Booking</a></li>
 									<li><a href="checkout.html">Checkout</a></li>
 									<li><a href="booking-success.html">Booking Success</a></li>
 									<li><a href="patient-dashboard.html">Patient Dashboard</a></li>
 									<li><a href="favourites.html">Favourites</a></li>
-									<li><a href="chat.html">Chat</a></li>
+									<!--<li><a href="chat.html">Chat</a></li>
 									<li><a href="profile-settings.html">Profile Settings</a></li>
-									<li><a href="change-password.html">Change Password</a></li>
+									<li><a href="change-password.html">Change Password</a></li>-->
 								</ul>
 							</li>	
 							<li class="has-submenu">
@@ -140,6 +140,7 @@
 									<!--<li><a href="blank-page.html">Starter Page</a></li>-->
 									<li><a href="login.html">Login</a></li>
 									<li><a href="register.html">Register</a></li>
+									<!--<li><a href="forgot-password.html">Forgot Password</a></li>-->
 								</ul>
 							</li>
 							<li class="has-submenu">
