--- a/product-checkout.html
+++ b/product-checkout.html
@@ -345,11 +345,11 @@
 											<tbody>
 												<tr>
 													<td>Safi Natural Blood Purifier Syrup 200 ml Manufactured By Hamdard (Wakf) Laboratories</td>
-													<td class="text-right">$200</td>
+													<td class="text-right">₹200</td>
 												</tr>
 												<tr>
 													<td>Safi Natural Blood Purifier Syrup 200 ml</td>
-													<td class="text-right">$200</td>
+													<td class="text-right">₹200</td>
 												</tr>
 											</tbody>
 										</table>
@@ -357,17 +357,17 @@
 									<div class="booking-summary pt-5">
 										<div class="booking-item-wrap">
 											<ul class="booking-date">
-												<li>Subtotal <span>$5,877.00</span></li>
-												<li>Shipping <span>$25.00</span></li>
+												<li>Subtotal <span>₹5,877.00</span></li>
+												<li>Shipping <span>₹25.00</span></li>
 											</ul>
 											<ul class="booking-fee">
-												<li>Tax <span>$0.00</span></li>
+												<li>Tax <span>₹0.00</span></li>
 											</ul>
 											<div class="booking-total">
 												<ul class="booking-total-list">
 													<li>
 														<span>Total</span>
-														<span class="total-cost">$160</span>
+														<span class="total-cost">₹160</span>
 													</li>
 													<li>
 												</ul>
