--- a/favourites.html
+++ b/favourites.html
@@ -297,10 +297,10 @@
 										</div>
 										<div class="pro-content">
 											<h3 class="title">
-												<a href="doctor-profile.html">Dr. Neha Singh</a> 
+												<a href="doctor-profile.html">Dr. Suman Singh</a> 
 												<i class="fas fa-check-circle verified"></i>
 											</h3>
-											<p class="speciality">MDS - Periodontology and Oral Implantology, BDS</p>
+											<p class="speciality">Gayeni</p>
 											<div class="rating">
 												<i class="fas fa-star filled"></i>
 												<i class="fas fa-star filled"></i>
