--- a/cart.html
+++ b/cart.html
@@ -173,7 +173,7 @@
 										<div class="close-icon"><i class="far fa-times-circle"></i></div>
 									    <img class="avatar-img rounded" src="assets/img/products/product.jpg" alt="User Image">
 									    <span class="item-name">Benzaxapine Croplex</span>
-									    <span class="item-price">$849.99</span>
+									    <span class="item-price">₹849.99</span>
 									    <span class="item-quantity">Quantity: 01</span>
 									</li>
 
@@ -181,7 +181,7 @@
 										<div class="close-icon"><i class="far fa-times-circle"></i></div>
 									    <img class="avatar-img rounded" src="assets/img/products/product1.jpg" alt="User Image">
 									    <span class="item-name">Ombinazol Bonibamol</span>
-									    <span class="item-price">$1,249.99</span>
+									    <span class="item-price">₹1,249.99</span>
 									    <span class="item-quantity">Quantity: 01</span>
 									</li>
 
@@ -189,17 +189,17 @@
 										<div class="close-icon"><i class="far fa-times-circle"></i></div>
 									    <img class="avatar-img rounded" src="assets/img/products/product2.jpg" alt="User Image">
 									    <span class="item-name">Dantotate Dantodazole</span>
-									    <span class="item-price">$129.99</span>
+									    <span class="item-price">₹129.99</span>
 									    <span class="item-quantity">Quantity: 01</span>
 									</li>
 								</ul>
 								<div class="booking-summary pt-3">
 									<div class="booking-item-wrap">
 										<ul class="booking-date">
-											<li>Subtotal <span>$5,877.00</span></li>
-											<li>Shipping <span>$25.00</span></li>
-											<li>Tax <span>$0.00</span></li>
-											<li>Total <span>$5.2555</span></li>
+											<li>Subtotal <span>₹5,877.00</span></li>
+											<li>Shipping <span>₹25.00</span></li>
+											<li>Tax <span>₹0.00</span></li>
+											<li>Total <span>₹5.2555</span></li>
 										</ul>
 										<div class="booking-total">
 											<ul class="booking-total-list text-align">
@@ -270,7 +270,7 @@
 												<a href="product-description.html">Benzaxapine Croplex</a>
 											</td>
 											<td>26565</td>
-											<td>$19</td>					
+											<td>₹19</td>					
 											<td class="text-center">
 											<div class="custom-increment cart">
 			                                    <div class="input-group1">
@@ -288,7 +288,7 @@
 			                                	</div>
 		                        			</div>
 											</td>
-											<td class="text-center">$19</td>
+											<td class="text-center">₹19</td>
 											<td class="text-right">
 												<div class="table-action">
 													<a href="javascript:void(0);" class="btn btn-sm bg-danger-light">
@@ -305,7 +305,7 @@
 												<a href="product-description.html">Ombinazol Bonibamol</a>
 											</td>
 											<td>865727</td>
-											<td>$22</td>					
+											<td>₹22</td>					
 											<td class="text-center">
 											<div class="custom-increment cart">
 			                                    <div class="input-group1">
@@ -323,7 +323,7 @@
 			                                	</div>
 		                        			</div>
 											</td>
-											<td class="text-center">$22</td>
+											<td class="text-center">₹22</td>
 											<td class="text-right">
 												<div class="table-action">
 													<a href="javascript:void(0);" class="btn btn-sm bg-danger-light">
@@ -358,7 +358,7 @@
 			                                	</div>
 		                        			</div>
 											</td>
-											<td class="text-center">$10</td>
+											<td class="text-center">₹10</td>
 											<td class="text-right">
 												<div class="table-action">
 													<a href="javascript:void(0);" class="btn btn-sm bg-danger-light">
@@ -375,7 +375,7 @@
 												<a href="product-description.html">Alispirox Aerorenone</a>
 											</td>
 											<td>543252</td>
-											<td>$26</td>					
+											<td>₹26</td>					
 											<td class="text-center">
 											<div class="custom-increment cart">
 			                                    <div class="input-group1">
@@ -393,7 +393,7 @@
 			                                	</div>
 		                        			</div>
 											</td>
-											<td class="text-center">$26</td>
+											<td class="text-center">₹26</td>
 											<td class="text-right">
 												<div class="table-action">
 													<a href="javascript:void(0);" class="btn btn-sm bg-danger-light">
@@ -410,7 +410,7 @@
 												<a href="product-description.html">Nitrolozin Zithrotropin</a>
 											</td>
 											<td>634534</td>
-											<td>$12</td>					
+											<td>₹12</td>					
 											<td class="text-center">
 											<div class="custom-increment cart">
 			                                    <div class="input-group1">
@@ -428,7 +428,7 @@
 			                                	</div>
 		                        			</div>
 											</td>
-											<td class="text-center">$12</td>
+											<td class="text-center">₹12</td>
 											<td class="text-right">
 												<div class="table-action">
 													<a href="javascript:void(0);" class="btn btn-sm bg-danger-light">
@@ -459,17 +459,17 @@
 									<div class="booking-summary">
 										<div class="booking-item-wrap">
 											<ul class="booking-date">
-												<li>Subtotal <span>$5,877.00</span></li>
-												<li>Shipping <span>$25.00<a href="#">Calculate shipping</a></span></li>
+												<li>Subtotal <span>₹5,877.00</span></li>
+												<li>Shipping <span>₹25.00<a href="#">Calculate shipping</a></span></li>
 											</ul>
 											<ul class="booking-fee pt-4">
-												<li>Tax <span>$0.00</span></li>
+												<li>Tax <span>₹0.00</span></li>
 											</ul>
 											<div class="booking-total">
 												<ul class="booking-total-list">
 													<li>
 														<span>Total</span>
-														<span class="total-cost">$160</span>
+														<span class="total-cost">₹160</span>
 													</li>
 													<li>
 														<div class="clinic-booking pt-4">
