--- a/pharmacy-details.html
+++ b/pharmacy-details.html
@@ -45,16 +45,16 @@
 							</span>
 						</a>
 						<a href="index.html" class="navbar-brand logo">
-							<!--<img src="assets/img/logo.png" class="img-fluid" alt="Logo">-->
-							<h2>Doctor Khojo</h2>
+							<img src="assets/img/logo.png" class="img-fluid" alt="Logo">
+							<!--<h2>Doctor Khojo</h2>-->
 							
 						</a>
 					</div>
 					<div class="main-menu-wrapper">
 						<div class="menu-header">
 							<a href="index.html" class="menu-logo">
-								<!--<img src="assets/img/logo.png" class="img-fluid" alt="Logo">-->
-								<h2>Doctor Khojo</h2>
+								<img src="assets/img/logo.png" class="img-fluid" alt="Logo">
+								<!--<h2>Doctor Khojo</h2>-->
 								
 							</a>
 							<a id="menu_close" class="menu-close" href="javascript:void(0);">
