pharmacy-index.html

--- a/pharmacy-index.html
+++ b/pharmacy-index.html
@@ -42,15 +42,15 @@
 							</span>
 						</a>
 						<a href="index.html" class="navbar-brand logo">
-							<img src="assets/img/logo.png" class="img-fluid" alt="Logo">
-							<!--<h2>Doctor Khojo</h2>-->
+							<!--<img src="assets/img/logo.png" class="img-fluid" alt="Logo">-->
+							<h2>Doctor Khojo</h2>
 						</a>
 					</div>
 					<div class="main-menu-wrapper">
 						<div class="menu-header">
 							<a href="index.html" class="menu-logo">
-								<img src="assets/img/logo.png" class="img-fluid" alt="Logo">
-								<!--<h2>Doctor Khojo</h2>-->
+								<!--<img src="assets/img/logo.png" class="img-fluid" alt="Logo">-->
+								<h2>Doctor Khojo</h2>
 							</a>
 							<a id="menu_close" class="menu-close" href="javascript:void(0);">
 								<i class="fas fa-times"></i>
@@ -65,7 +65,7 @@
 								<ul class="submenu">
 									<li><a href="doctor-dashboard.html">Doctor Dashboard</a></li>
 									<li><a href="appointments.html">Appointments</a></li>
-									<li><a href="schedule-timings.html">Schedule Timing</a></li>
+									<!--<li><a href="schedule-timings.html">Schedule Timing</a></li>
 									<li><a href="my-patients.html">Patients List</a></li>
 									<li><a href="patient-profile.html">Patients Profile</a></li>
 									<li><a href="chat-doctor.html">Chat</a></li>
@@ -80,7 +80,7 @@
 											<li><a href="blog-details.html">Blog view</a></li>
 											<li><a href="doctor-add-blog.html">Add Blog</a></li>
 										</ul>
-									</li>
+									</li>-->
 								</ul>
 							</li>	
 							<li class="has-submenu">
@@ -100,9 +100,9 @@
 									<li><a href="booking-success.html">Booking Success</a></li>
 									<li><a href="patient-dashboard.html">Patient Dashboard</a></li>
 									<li><a href="favourites.html">Favourites</a></li>
-									<li><a href="chat.html">Chat</a></li>
+									<!--<li><a href="chat.html">Chat</a></li>
 									<li><a href="profile-settings.html">Profile Settings</a></li>
-									<li><a href="change-password.html">Change Password</a></li>
+									<li><a href="change-password.html">Change Password</a></li>-->
 								</ul>
 							</li>
 							<li class="has-submenu active">
@@ -115,17 +115,18 @@
 									<li><a href="product-description.html">Product Description</a></li>
 									<li><a href="cart.html">Cart</a></li>
 									<li><a href="product-checkout.html">Product Checkout</a></li>
-									<li><a href="payment-success.html">Payment Success</a></li>
+									<!--<li><a href="payment-success.html">Payment Success</a></li>-->
 								</ul>
 							</li>
 							<li class="has-submenu">
-								<a href="">Pages <i class="fas fa-chevron-down"></i></a>
+								<a href="">Diagnostics <i class="fas fa-chevron-down"></i></a>
 								<ul class="submenu">
-									<li><a href="voice-call.html">Voice Call</a></li>
-									<li><a href="video-call.html">Video Call</a></li>
-									<li><a href="search.html">Search Doctors</a></li>
-									<li><a href="calendar.html">Calendar</a></li>
-									<li><a href="components.html">Components</a></li>
+									<li><a href="dignostics-index.html">Diagnostics</a></li>
+									<li><a href="lab-search.html">Lab Search</a></li>
+									<li><a href="lab-details.html">Lab Details</a></li>
+									<li><a href="diagnostics-all.html">Diagnostics List</a></li>
+									<!--<li><a href="calendar.html">Calendar</a></li>
+									<li><a href="components.html">Components</a></li>-->
 									<li class="has-submenu">
 										<a href="invoices.html">Invoices</a>
 										<ul class="submenu">
@@ -133,10 +134,10 @@
 											<li><a href="invoice-view.html">Invoice View</a></li>
 										</ul>
 									</li>
-									<li><a href="blank-page.html">Starter Page</a></li>
+									<!--<li><a href="blank-page.html">Starter Page</a></li>-->
 									<li><a href="login.html">Login</a></li>
 									<li><a href="register.html">Register</a></li>
-									<li><a href="forgot-password.html">Forgot Password</a></li>
+									<!--<li><a href="forgot-password.html">Forgot Password</a></li>-->
 								</ul>
 							</li>
 							<li class="has-submenu">
