--- a/product-all.html
+++ b/product-all.html
@@ -52,13 +52,15 @@
 							</span>
 						</a>
 						<a href="index.html" class="navbar-brand logo">
-							<img src="assets/img/logo.png" class="img-fluid" alt="Logo">
+							<!--<img src="assets/img/logo.png" class="img-fluid" alt="Logo">-->
+							<h2>Doctor Khojo</h2>
 						</a>
 					</div>
 					<div class="main-menu-wrapper">
 						<div class="menu-header">
 							<a href="index.html" class="menu-logo">
-								<img src="assets/img/logo.png" class="img-fluid" alt="Logo">
+								<!--<img src="assets/img/logo.png" class="img-fluid" alt="Logo">-->
+								<h2>Doctor Khojo</h2>
 							</a>
 							<a id="menu_close" class="menu-close" href="javascript:void(0);">
 								<i class="fas fa-times"></i>
@@ -306,8 +308,8 @@
 											</h3>
 											<div class="row align-items-center">
 												<div class="col-lg-6">
-													<span class="price">$19.00</span>
-													<span class="price-strike">$45.00</span>
+													<span class="price">₹19.00</span>
+													<span class="price-strike">₹45.00</span>
 												</div>
 												<div class="col-lg-6 text-right">
 													<a href="cart.html" class="cart-icon"><i class="fas fa-shopping-cart"></i></a>
@@ -332,7 +334,7 @@
 											</h3>
 											<div class="row align-items-center">
 												<div class="col-lg-6">
-													<span class="price">$16.00</span>
+													<span class="price">₹16.00</span>
 												</div>
 												<div class="col-lg-6 text-right">
 													<a href="cart.html" class="cart-icon"><i class="fas fa-shopping-cart"></i></a>
@@ -357,7 +359,7 @@
 											</h3>
 											<div class="row align-items-center">
 												<div class="col-lg-6">
-													<span class="price">$22.00</span>
+													<span class="price">₹22.00</span>
 												</div>
 												<div class="col-lg-6 text-right">
 													<a href="cart.html" class="cart-icon"><i class="fas fa-shopping-cart"></i></a>
@@ -382,8 +384,8 @@
 											</h3>
 											<div class="row align-items-center">
 												<div class="col-lg-6">
-													<span class="price">$10.00</span>
-													<span class="price-strike">$12.00</span>
+													<span class="price">₹10.00</span>
+													<span class="price-strike">₹12.00</span>
 												</div>
 												<div class="col-lg-6 text-right">
 													<a href="cart.html" class="cart-icon"><i class="fas fa-shopping-cart"></i></a>
@@ -408,7 +410,7 @@
 											</h3>
 											<div class="row align-items-center">
 												<div class="col-lg-6">
-													<span class="price">$7.00</span>
+													<span class="price">₹7.00</span>
 												</div>
 												<div class="col-lg-6 text-right">
 													<a href="cart.html" class="cart-icon"><i class="fas fa-shopping-cart"></i></a>
@@ -433,7 +435,7 @@
 											</h3>
 											<div class="row align-items-center">
 												<div class="col-lg-6">
-													<span class="price">$15.00</span>
+													<span class="price">₹15.00</span>
 												</div>
 												<div class="col-lg-6 text-right">
 													<a href="cart.html" class="cart-icon"><i class="fas fa-shopping-cart"></i></a>
@@ -458,7 +460,7 @@
 											</h3>
 											<div class="row align-items-center">
 												<div class="col-lg-6">
-													<span class="price">$26.00</span>
+													<span class="price">₹26.00</span>
 												</div>
 												<div class="col-lg-6 text-right">
 													<a href="cart.html" class="cart-icon"><i class="fas fa-shopping-cart"></i></a>
@@ -483,8 +485,8 @@
 											</h3>
 											<div class="row align-items-center">
 												<div class="col-lg-6">
-													<span class="price">$10.00</span>
-													<span class="price-strike">$12.00</span>
+													<span class="price">₹10.00</span>
+													<span class="price-strike">₹12.00</span>
 												</div>
 												<div class="col-lg-6 text-right">
 													<a href="cart.html" class="cart-icon"><i class="fas fa-shopping-cart"></i></a>
@@ -509,7 +511,7 @@
 											</h3>
 											<div class="row align-items-center">
 												<div class="col-lg-6">
-													<span class="price">$12.00</span>
+													<span class="price">₹12.00</span>
 												</div>
 												<div class="col-lg-6 text-right">
 													<a href="cart.html" class="cart-icon"><i class="fas fa-shopping-cart"></i></a>
@@ -534,7 +536,7 @@
 											</h3>
 											<div class="row align-items-center">
 												<div class="col-lg-6">
-													<span class="price">$9.00</span>
+													<span class="price">₹9.00</span>
 												</div>
 												<div class="col-lg-6 text-right">
 													<a href="cart.html" class="cart-icon"><i class="fas fa-shopping-cart"></i></a>
@@ -559,7 +561,7 @@
 											</h3>
 											<div class="row align-items-center">
 												<div class="col-lg-6">
-													<span class="price">$16.00</span>
+													<span class="price">₹16.00</span>
 												</div>
 												<div class="col-lg-6 text-right">
 													<a href="cart.html" class="cart-icon"><i class="fas fa-shopping-cart"></i></a>
@@ -584,7 +586,7 @@
 											</h3>
 											<div class="row align-items-center">
 												<div class="col-lg-6">
-													<span class="price">$7.00</span>
+													<span class="price">₹7.00</span>
 												</div>
 												<div class="col-lg-6 text-right">
 													<a href="cart.html" class="cart-icon"><i class="fas fa-shopping-cart"></i></a>
@@ -609,7 +611,7 @@
 											</h3>
 											<div class="row align-items-center">
 												<div class="col-lg-6">
-													<span class="price">$30.00</span>
+													<span class="price">₹30.00</span>
 												</div>
 												<div class="col-lg-6 text-right">
 													<a href="cart.html" class="cart-icon"><i class="fas fa-shopping-cart"></i></a>
@@ -634,7 +636,7 @@
 											</h3>
 											<div class="row align-items-center">
 												<div class="col-lg-6">
-													<span class="price">$50.00</span>
+													<span class="price">₹50.00</span>
 												</div>
 												<div class="col-lg-6 text-right">
 													<a href="cart.html" class="cart-icon"><i class="fas fa-shopping-cart"></i></a>
@@ -659,8 +661,8 @@
 											</h3>
 											<div class="row align-items-center">
 												<div class="col-lg-6">
-													<span class="price">$10.00</span>
-													<span class="price-strike">$20.00</span>
+													<span class="price">₹10.00</span>
+													<span class="price-strike">₹20.00</span>
 												</div>
 												<div class="col-lg-6 text-right">
 													<a href="cart.html" class="cart-icon"><i class="fas fa-shopping-cart"></i></a>
