--- a/product-description.html
+++ b/product-description.html
@@ -51,13 +51,15 @@
 							</span>
 						</a>
 						<a href="index.html" class="navbar-brand logo">
-							<img src="assets/img/logo.png" class="img-fluid" alt="Logo">
+							<!--<img src="assets/img/logo.png" class="img-fluid" alt="Logo">-->
+							<h2>Doctor Khojo</h2>
 						</a>
 					</div>
 					<div class="main-menu-wrapper">
 						<div class="menu-header">
 							<a href="index.html" class="menu-logo">
 								<img src="assets/img/logo.png" class="img-fluid" alt="Logo">
+								<h2>Doctor Khojo</h2>
 							</a>
 							<a id="menu_close" class="menu-close" href="javascript:void(0);">
 								<i class="fas fa-times"></i>
@@ -359,7 +361,7 @@
 							<div class="card search-filter">
 								<div class="card-body">
 									<div class="clini-infos mt-0">
-										<h2>$19 <b class="text-lg strike">$45</b>  <span class="text-lg text-success"><b>10% off</b></span></h2>
+										<h2>₹19 <b class="text-lg strike">$45</b>  <span class="text-lg text-success"><b>10% off</b></span></h2>
 									</div>
 									<span class="badge badge-primary">In stock</span>
 									<div class="custom-increment pt-4">
