--- a/product-description.html
+++ b/product-description.html
@@ -361,7 +361,7 @@
 							<div class="card search-filter">
 								<div class="card-body">
 									<div class="clini-infos mt-0">
-										<h2>₹19 <b class="text-lg strike">$45</b>  <span class="text-lg text-success"><b>10% off</b></span></h2>
+										<h2>₹19 <b class="text-lg strike">₹45</b>  <span class="text-lg text-success"><b>10% off</b></span></h2>
 									</div>
 									<span class="badge badge-primary">In stock</span>
 									<div class="custom-increment pt-4">
