--- a/pharmacy-index.html
+++ b/pharmacy-index.html
@@ -424,7 +424,7 @@
 												<i class="far fa-clock"></i> Available on Fri, 22 Mar
 											</li>
 											<li>
-												<i class="far fa-money-bill-alt"></i> $300 - $1000 
+												<i class="far fa-money-bill-alt"></i> ₹300 - ₹1000 
 												<i class="fas fa-info-circle" data-toggle="tooltip" title="Lorem Ipsum"></i>
 											</li>
 										</ul>
@@ -472,7 +472,7 @@
 												<i class="far fa-clock"></i> Available on Fri, 22 Mar
 											</li>
 											<li>
-												<i class="far fa-money-bill-alt"></i> $50 - $300 
+												<i class="far fa-money-bill-alt"></i> ₹50 - ₹300 
 												<i class="fas fa-info-circle" data-toggle="tooltip" title="Lorem Ipsum"></i>
 											</li>
 										</ul>
@@ -520,7 +520,7 @@
 												<i class="far fa-clock"></i> Available on Fri, 22 Mar
 											</li>
 											<li>
-												<i class="far fa-money-bill-alt"></i> $100 - $400 
+												<i class="far fa-money-bill-alt"></i> ₹100 - ₹400 
 												<i class="fas fa-info-circle" data-toggle="tooltip" title="Lorem Ipsum"></i>
 											</li>
 										</ul>
@@ -568,7 +568,7 @@
 												<i class="far fa-clock"></i> Available on Fri, 22 Mar
 											</li>
 											<li>
-												<i class="far fa-money-bill-alt"></i> $150 - $250 
+												<i class="far fa-money-bill-alt"></i> ₹150 - ₹250 
 												<i class="fas fa-info-circle" data-toggle="tooltip" title="Lorem Ipsum"></i>
 											</li>
 										</ul>
@@ -616,7 +616,7 @@
 												<i class="far fa-clock"></i> Available on Fri, 22 Mar
 											</li>
 											<li>
-												<i class="far fa-money-bill-alt"></i> $50 - $700 
+												<i class="far fa-money-bill-alt"></i> ₹50 - ₹700 
 												<i class="fas fa-info-circle" data-toggle="tooltip" title="Lorem Ipsum"></i>
 											</li>
 										</ul>
@@ -664,7 +664,7 @@
 												<i class="far fa-clock"></i> Available on Fri, 22 Mar
 											</li>
 											<li>
-												<i class="far fa-money-bill-alt"></i> $100 - $500 
+												<i class="far fa-money-bill-alt"></i> ₹100 - ₹500 
 												<i class="fas fa-info-circle" data-toggle="tooltip" title="Lorem Ipsum"></i>
 											</li>
 										</ul>
@@ -712,7 +712,7 @@
 												<i class="far fa-clock"></i> Available on Fri, 22 Mar
 											</li>
 											<li>
-												<i class="far fa-money-bill-alt"></i> $100 - $1000 
+												<i class="far fa-money-bill-alt"></i> ₹100 - ₹1000 
 												<i class="fas fa-info-circle" data-toggle="tooltip" title="Lorem Ipsum"></i>
 											</li>
 										</ul>
@@ -760,7 +760,7 @@
 												<i class="far fa-clock"></i> Available on Fri, 22 Mar
 											</li>
 											<li>
-												<i class="far fa-money-bill-alt"></i> $100 - $400 
+												<i class="far fa-money-bill-alt"></i> ₹100 - ₹400 
 												<i class="fas fa-info-circle" data-toggle="tooltip" title="Lorem Ipsum"></i>
 											</li>
 										</ul>
