--- a/pharmacy-details.html
+++ b/pharmacy-details.html
@@ -797,7 +797,7 @@
 										<h2>Doctor Khojo</h2>
 									</div>
 									<div class="footer-about-content">
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+										<!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>-->
 										<div class="social-icon">
 											<ul>
 												<li>
