--- a/favourites.html
+++ b/favourites.html
@@ -344,10 +344,10 @@
 										</div>
 										<div class="pro-content">
 											<h3 class="title">
-												<a href="doctor-profile.html">Dr. Prince Chauhan</a> 
+												<a href="doctor-profile.html">Dr. Ravi Prakash</a> 
 												<i class="fas fa-check-circle verified"></i>
 											</h3>
-											<p class="speciality">BDS, MDS - Oral & Maxillofacial Surgery</p>
+											<p class="speciality">Anaethestic</p>
 											<div class="rating">
 												<i class="fas fa-star filled"></i>
 												<i class="fas fa-star filled"></i>
@@ -391,10 +391,10 @@
 										</div>
 										<div class="pro-content">
 											<h3 class="title">
-												<a href="doctor-profile.html">Dr. Seneha Kumari</a> 
+												<a href="doctor-profile.html">Dr. Archana Ojha</a> 
 												<i class="fas fa-check-circle verified"></i>
 											</h3>
-											<p class="speciality">MBBS, MD - General Medicine, DNB - Cardiology</p>
+											<p class="speciality">Gayeni</p>
 											<div class="rating">
 												<i class="fas fa-star filled"></i>
 												<i class="fas fa-star filled"></i>
@@ -438,10 +438,10 @@
 										</div>
 										<div class="pro-content">
 											<h3 class="title">
-												<a href="doctor-profile.html">Dr. Amisha Kumari</a> 
+												<a href="doctor-profile.html">Dr. Kamini Chaudhary</a> 
 												<i class="fas fa-check-circle verified"></i>
 											</h3>
-											<p class="speciality">MBBS, MS - General Surgery, MCh - Urology</p>
+											<p class="speciality">Gayani</p>
 											<div class="rating">
 												<i class="fas fa-star filled"></i>
 												<i class="fas fa-star filled"></i>
@@ -485,10 +485,10 @@
 										</div>
 										<div class="pro-content">
 											<h3 class="title">
-												<a href="doctor-profile.html">Dr. Vishwak Kumar Campbell</a> 
+												<a href="doctor-profile.html">Dr. Mukesh Chauhan</a> 
 												<i class="fas fa-check-circle verified"></i>
 											</h3>
-											<p class="speciality">MBBS, MD - Ophthalmology, DNB - Ophthalmology</p>
+											<p class="speciality">Dentist</p>
 											<div class="rating">
 												<i class="fas fa-star filled"></i>
 												<i class="fas fa-star filled"></i>
@@ -533,10 +533,10 @@
 										</div>
 										<div class="pro-content">
 											<h3 class="title">
-												<a href="doctor-profile.html">Dr. Sandhya Singh</a> 
+												<a href="doctor-profile.html">Dr.O.P Chauhan</a> 
 												<i class="fas fa-check-circle verified"></i>
 											</h3>
-											<p class="speciality">MS - Orthopaedics, MBBS, M.Ch - Orthopaedics</p>
+											<p class="speciality">Skin</p>
 											<div class="rating">
 												<i class="fas fa-star filled"></i>
 												<i class="fas fa-star filled"></i>
@@ -581,10 +581,10 @@
 										</div>
 										<div class="pro-content">
 											<h3 class="title">
-												<a href="doctor-profile.html">Dr. Payal Singh</a> 
+												<a href="doctor-profile.html">Dr. N.K Singh</a> 
 												<i class="fas fa-check-circle verified"></i>
 											</h3>
-											<p class="speciality">MBBS, MD - General Medicine, DM - Neurology</p>
+											<p class="speciality">Ortho</p>
 											<div class="rating">
 												<i class="fas fa-star filled"></i>
 												<i class="fas fa-star filled"></i>
@@ -629,10 +629,10 @@
 										</div>
 										<div class="pro-content">
 											<h3 class="title">
-												<a href="doctor-profile.html">Dr. Bikky Singh</a> 
+												<a href="doctor-profile.html">Dr.Sanjiv Kumar</a> 
 												<i class="fas fa-check-circle verified"></i>
 											</h3>
-											<p class="speciality">MBBS, MD - Dermatology , Venereology & Lepros</p>
+											<p class="speciality">Pathology</p>
 											<div class="rating">
 												<i class="fas fa-star filled"></i>
 												<i class="fas fa-star filled"></i>
@@ -677,10 +677,10 @@
 										</div>
 										<div class="pro-content">
 											<h3 class="title">
-												<a href="doctor-profile.html">Dr. John Gibbs</a> 
+												<a href="doctor-profile.html">Dr. Madhusudan Kumar</a> 
 												<i class="fas fa-check-circle verified"></i>
 											</h3>
-											<p class="speciality">MDS - Periodontology and Oral Implantology, BDS</p>
+											<p class="speciality">Ortho</p>
 											<div class="rating">
 												<i class="fas fa-star filled"></i>
 												<i class="fas fa-star filled"></i>
@@ -725,10 +725,10 @@
 										</div>
 										<div class="pro-content">
 											<h3 class="title">
-												<a href="doctor-profile.html">Dr. Olga Barlow</a> 
+												<a href="doctor-profile.html">Dr. Ajit Prakash</a>
 												<i class="fas fa-check-circle verified"></i>
 											</h3>
-											<p class="speciality">MDS - Periodontology and Oral Implantology, BDS</p>
+											<p class="speciality">Child</p>
 											<div class="rating">
 												<i class="fas fa-star filled"></i>
 												<i class="fas fa-star filled"></i>
@@ -773,10 +773,10 @@
 										</div>
 										<div class="pro-content">
 											<h3 class="title">
-												<a href="doctor-profile.html">Dr. Julia Washington</a> 
+												<a href="doctor-profile.html">Dr. S.K Madhukar</a> 
 												<i class="fas fa-check-circle verified"></i>
 											</h3>
-											<p class="speciality">MBBS, MD - General Medicine, DM - Endocrinology</p>
+											<p class="speciality">Physician</p>
 											<div class="rating">
 												<i class="fas fa-star filled"></i>
 												<i class="fas fa-star filled"></i>
@@ -821,10 +821,10 @@
 										</div>
 										<div class="pro-content">
 											<h3 class="title">
-												<a href="doctor-profile.html">Dr. Shaun Aponte</a> 
+												<a href="doctor-profile.html">Dr. Rajesh Kumar</a> 
 												<i class="fas fa-check-circle verified"></i>
 											</h3>
-											<p class="speciality">MBBS, MS - ENT, Diploma in Otorhinolaryngology (DLO)</p>
+											<p class="speciality">Physiotherap</p>
 											<div class="rating">
 												<i class="fas fa-star filled"></i>
 												<i class="fas fa-star filled"></i>
