--- a/cart.html
+++ b/cart.html
@@ -506,7 +506,7 @@
 								<div class="footer-widget footer-about">
 									<div class="footer-logo">
 										<!--<img src="assets/img/footer-logo.png" alt="logo">-->
-							
+										<h2>Doctor Khojo</h2>
 									</div>
 									<div class="footer-about-content">
 										<!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>-->
